--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "angular": ">=1.3.x",
     "font-awesome": ">=4.0.x",
-    "rangy": "~1.3.0"
+    "rangy": "~1.3.0",
+    "angular-bootstrap": "^2.5.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.3.x",
