--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "http://textangular.com",
   "main": "./dist/textAngular.umd.js",
   "dependencies": {
-    "rangy": "^1.3.0"
+    "rangy": "^1.3.0",
+    "typo-js": "^1.0.3"
   },
   "browserDependencies": {
     "angular": "^1.2.x",
